study_mass_fit/mylog_rejectpsi_debug_data1
  File "perBin_massFit_allOnMC_copy.py", line 752
    if ibin == 5
               ^
SyntaxError: invalid syntax
